// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eNQAEJ bCKuax"
  >
    <table
      className="sc-hMqMXs fkqqbC"
    >
      <tbody
        className="sc-kkGfuU gqJIVH"
      >
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            US
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            PL
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Warsaw
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            DE
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Berlin
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            FR
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Paris
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            ES
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Madird
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            —
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eNQAEJ bCKuax"
  >
    <table
      className="sc-hMqMXs fkqqbC"
    >
      <thead
        className="sc-kEYyzF gfWKdx"
      >
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <th
            className="sc-eHgmQL etzUPD"
          >
            Code
          </th>
          <th
            className="sc-eHgmQL etzUPD"
          >
            Capital
          </th>
          <th
            className="sc-eHgmQL etzUPD"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kkGfuU gqJIVH"
      >
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            US
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            PL
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Warsaw
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            DE
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Berlin
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            FR
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Paris
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            ES
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Madird
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-hSdWYo deKCum"
          >
            —
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eNQAEJ bCKuax"
  >
    <table
      className="sc-hMqMXs fkqqbC"
    >
      <thead
        className="sc-kEYyzF gfWKdx"
      >
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <th
            className="sc-eHgmQL etzUPD"
          >
            #
          </th>
          <th
            className="sc-eHgmQL etzUPD"
          >
            Code
          </th>
          <th
            className="sc-eHgmQL etzUPD"
          >
            Capital
          </th>
          <th
            className="sc-eHgmQL etzUPD"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kkGfuU gqJIVH"
      >
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            1
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            US
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            2
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            PL
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Warsaw
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            3
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            DE
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Berlin
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            4
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            FR
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Paris
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            5
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            ES
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Madird
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-iAyFgw jcGVEL"
        >
          <td
            className="sc-cvbbAY fIcTKz"
          >
            6
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            —
          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-hSdWYo deKCum"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
